@@ -1579,3 +1579,4 @@ The Wordpress script installer use wp-cli if available for installation and upgr
 Any virtual servers can now share a DNS zone file, unlike in previous Virtualmin releases where only a top-level server could be a DNS domain parent. This removes the need to create additional NS records in the parent domain in most cases.
 ---- Changes since 6.02 ----
 When adding an alias to a domain with a Let's Encrypt SSL certificate, the cert is automatically updated to include the alias domain.
+Backups from cPanel, Plesk and other control panels can now be migrated even when Nginx is used as a webserver.
